// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should be able to undo the emoji icon using keyboard shortcut 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "this text should be in the panel",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`change-selected-type.ts: Select panel and then change Icon when allowCustomPanelEdit is true 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelColor": "#DEEBFF",
        "panelIcon": ":grinning:",
        "panelIconId": "1f600",
        "panelIconText": "😀",
        "panelType": "custom",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "this text should be in the panel",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`change-selected-type.ts: Select panel and then change background color when allowCustomPanelEdit is true 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelColor": "#E3FCEF",
        "panelIcon": ":info:",
        "panelIconId": "atlassian-info",
        "panelType": "custom",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "this text should be in the panel",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`change-selected-type.ts: Select panel and then change type 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "error",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "this text should be in the panel",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`should render panel with icon using fallback text when icon short name is incorrect when allowCustomPanelEdit is true 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelIcon": ":winkk:",
        "panelIconText": "😉",
        "panelType": "custom",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "custom - only emoji",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
